# mcppga

./: CMakeLists.txt  README.md
include/std/: string.hpp  types.hpp
src/std/: string.cpp
